@@ -8,8 +8,8 @@ dnl empty.
 
 m4_define(pcre_major, [7])
 m4_define(pcre_minor, [4])
-m4_define(pcre_prerelease, [-RC3])
-m4_define(pcre_date, [2007-09-17])
+m4_define(pcre_prerelease, [-RC4])
+m4_define(pcre_date, [2007-09-19])
 
 # Libtool shared library interface versions (current:revision:age)
 m4_define(libpcre_version, [0:1:0])
